tests/error/array_errors/array_index_linear_put_duplicate_index.err
Error: Linearity violation (at $FILE:11:15)
   | 
 9 |     qs.put(q1, 0)
10 |     q2 = qubit()
11 |     qs.put(q2, 0)
   |                ^ Linear value at index 0 used multiple times

Note:
   | 
 8 |     q1 = qubit()
 9 |     qs.put(q1, 0)
   |                -

Note: First use was here

Guppy compilation failed due to 1 previous error
